fix: scrollbar style, session record bg color

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -49,6 +49,12 @@
   }
 }
 
+::-webkit-scrollbar-sample {
+  display: none;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 /* Vue-Toastification */
 .Vue-Toastification__container {
   @apply !items-center !pt-safe;
